<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".register"
        android:orientation="vertical"
        tools.context = ".RegisterFragment">

    <ImageView
       android:id="@+id/archelon_logo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:srcCompat="@drawable/logo_archelon"
       android:layout_marginTop="10dp"
       android:layout_gravity="center" />

   <EditText
       android:id="@+id/user_first_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
       android:ems="10"
       android:hint="@string/enter_name"
       android:inputType="textPersonName"
       android:layout_gravity="center"/>


    <EditText
        android:id="@+id/user_email_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/enter_email_ad"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"/>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/user_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/re_entered_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/save_and_login"/>

    </LinearLayout>
</layout>

